--- a/build.yaml
+++ b/build.yaml
@@ -13,7 +13,7 @@
 #
 ---
 include:
-  - board: planck_rev6
-  - board: corneish_zen_v2_left
-  - board: corneish_zen_v2_right
+#  - board: planck_rev6
+#  - board: corneish_zen_v2_left
+#  - board: corneish_zen_v2_right
   - board: preonic_rev3
