--- a/build.yaml
+++ b/build.yaml
@@ -17,3 +17,7 @@ include:
 #  - board: corneish_zen_v2_left
 #  - board: corneish_zen_v2_right
   - board: preonic_rev3
+  - board: nice_nano_v2
+    shield: splitkb_aurora_sweep_left
+  - board: nice_nano_v2
+    shield: splitkb_aurora_sweep_right
