Squashed commit of the following:
commit 92db3922fb2373d973b11f3bd80fb235331d4879
Author: DustVoice <info@dustvoice.de>
Date:   Thu May 30 01:34:51 2024 +0200

    Try to get mousekeys finally working again

commit 2ece0702a6de8fa453c4ffc26b0de1b6b6f113c4
Author: DustVoice <info@dustvoice.de>
Date:   Wed May 29 08:11:10 2024 +0200

    Disable build for preonic

commit 16dc87516dc13a830ef3c96026bd3a4becc06dde
Author: DustVoice <info@dustvoice.de>
Date:   Wed May 29 08:10:31 2024 +0200

    Disable further smart_mouse

commit 15100e38f473cbe214af9cf37ac6c3c8823440c6
Author: DustVoice <info@dustvoice.de>
Date:   Wed May 29 07:54:19 2024 +0200

    Merge dedicated mouse layer with FN layer

commit 292493e636206945340f425bad867a5f34b8ffab
Author: DustVoice <info@dustvoice.de>
Date:   Fri May 17 19:32:46 2024 +0200

    Maybe name the if condition right for combos to work?!

commit 15cc1f731a6ffed2fd86b31e1f50fd5d240fb97f
Author: David Holland <info@dustvoice.de>
Date:   Thu May 16 16:27:47 2024 +0200

    Replace dustvoice_keymap_0.jpg

commit 68e8ff5eae06651dfa1c55d700aa1e17844fd557
Author: DustVoice <info@dustvoice.de>
Date:   Thu May 16 15:28:47 2024 +0200

    Manage orphan gaming combo

commit b25d039b375689a9c444be28338d6ba1e391d7d1
Author: DustVoice <info@dustvoice.de>
Date:   Thu May 16 15:16:50 2024 +0200

    Correct faulty define

commit f439da4d46ca8f1337d56b1cf3d886df44b9da0e
Author: DustVoice <info@dustvoice.de>
Date:   Thu May 16 15:08:39 2024 +0200

    Correct missing refactoring

commit 53cc75a7cb75b199dfd1afb033a603ecaf1b0df7
Author: DustVoice <info@dustvoice.de>
Date:   Thu May 16 14:44:57 2024 +0200

    Bigger refactoring and restructuring

commit 2347f95af3b7d6b2c1331421077dd4eca7e5e228
Author: DustVoice <info@dustvoice.de>
Date:   Thu May 16 11:10:24 2024 +0200

    Try native nice!view widgets again

commit 44571a0da8d15a088d227e7a90ebed17921c4b76
Author: David Holland <info@dustvoice.de>
Date:   Wed May 8 08:30:23 2024 +0200

    Replace dustvo

--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -22,7 +22,8 @@
 /* Horizontal combos - left hand */
 ZMK_COMBO(esc,   &kp ESC,       LT3 LT2,     DEF NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(ret,   &kp RETURN,    LT2 LT1,     DEF NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(mouse, &smart_mouse,  LT3 LT1,     DEF NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+// NOTE: Not in use
+// ZMK_COMBO(mouse, &smart_mouse,  LT3 LT1,     DEF NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
 ZMK_COMBO(tab,   HRC_TAB,       LM3 LM2,     DEF NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(repeat,HRC_REPEAT,    LM2 LM1,     DEF NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
@@ -45,8 +46,10 @@ ZMK_COMBO(rbkt,  &kp RBKT,      RB2 RB3,     DEF     NUM, COMBO_TERM_FAST, COMBO
 ZMK_COMBO(lbrc,  &kp LBRC,      RB1 RB2,         NAV    , COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(rbrc,  &kp RBRC,      RB2 RB3,         NAV    , COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
-ZMK_COMBO(grk,   &sl UC,        RT1 RT3,     DEF NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(cpgrk, &sls 0,        RT1 RT2 RT3, DEF NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+#if CONFIG_UNICODE
+ZMK_COMBO(grk,   &sl UNICODE, RT1 RT3,       DEF NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(cpgrk, &sls 0,      RT1 RT2 RT3,   DEF NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+#endif
 
 /* Vertical combos - left hand */
 ZMK_COMBO(at,    &kp AT,        LT3 LM3,     DEF NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
@@ -64,9 +67,38 @@ ZMK_COMBO(caret, &kp CARET,     RT0 RM0,     DEF NAV NUM, COMBO_TERM_SLOW, COMBO
 ZMK_COMBO(plus,  &kp PLUS,      RT1 RM1,     DEF NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(star,  &kp STAR,      RT2 RM2,     DEF NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(amps,  &kp AMPS,      RT3 RM3,     DEF NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(excl,  &kp EXCL,      RT4 RM4,     DEF NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 ZMK_COMBO(under, &kp UNDER,     RM0 RB0,     DEF NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(minus, &kp MINUS,     RM1 RB1,     DEF NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(fslh,  &kp FSLH,      RM2 RB2,     DEF NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(pipe,  &kp PIPE,      RM3 RB3,     DEF NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(qmark, &kp QMARK,     RM4 RB4,     DEF NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
+/* Gaming combo */
+#if CONFIG_GAMING
+ZMK_COMBO(g_bsp, &kp BSPC,      RT1 RT2,        MOBA FPS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(g_del, &kp DEL,       RT2 RT3,        MOBA FPS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+
+ZMK_COMBO(m_fn,  &mo MOBA_FN,   LH1 LH0,            MOBA, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(f_fn,  &mo FPS_FN,    LH1 LH0,             FPS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+
+ZMK_COMBO(C_q,   &kp LC(Q),     LT4 LM4,            MOBA, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(C_w,   &kp LC(W),     LT3 LM3,            MOBA, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(C_e,   &kp LC(E),     LT2 LM2,            MOBA, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(C_r,   &kp LC(R),     LT1 LM1,            MOBA, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+
+ZMK_COMBO(m_f2,  &kp F2,        LT4 LM4,         MOBA_FN, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(m_f3,  &kp F3,        LT3 LM3,         MOBA_FN, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(m_f4,  &kp F4,        LT2 LM2,         MOBA_FN, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(m_f5,  &kp F5,        LT1 LM1,         MOBA_FN, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(m_f1,  &kp F1,        LT0 LM0,         MOBA_FN, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+
+ZMK_COMBO(f_f2,  &kp F2,        LT4 LM4,          FPS_FN, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(f_f3,  &kp F3,        LT3 LM3,          FPS_FN, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(f_f4,  &kp F4,        LT2 LM2,          FPS_FN, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(f_f5,  &kp F5,        LT1 LM1,          FPS_FN, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(f_f1,  &kp F1,        LT0 LM0,          FPS_FN, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+#endif
+
+/* vim: set ft=c tw=174: */
