--- a/build.yaml
+++ b/build.yaml
@@ -13,8 +13,15 @@
 #
 ---
 include:
-  - board: planck_rev6
-  - board: corneish_zen_v2_left
-  - board: corneish_zen_v2_right
-  - board: glove80_lh
-  - board: glove80_rh
+  #  - board: planck_rev6
+  #  - board: corneish_zen_v2_left
+  #  - board: corneish_zen_v2_right
+  #  - board: glove80_lh
+  #  - board: glove80_rh
+  # - board: preonic_rev3
+  - board: nice_nano_v2
+    shield: splitkb_aurora_sweep_left nice_view_adapter nice_view
+  - board: nice_nano_v2
+    shield: splitkb_aurora_sweep_right nice_view_adapter nice_view
+  - board: nice_nano_v2
+    shield: settings_reset
