--- a/config/mouse.dtsi
+++ b/config/mouse.dtsi
@@ -24,3 +24,7 @@
 #define U_WH_L &msc SCRL_LEFT
 #define U_WH_R &msc SCRL_RIGHT
 
+/* Local Variables: */
+/* mode: c */
+/* End: */
+/* vim: set ft=c tw=174: */
