Try to make >2< work as a FPS keymap combo

--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -87,10 +87,10 @@ ZMK_COMBO(m_f4,  &kp F4,        LT2 LM2,         MOBA_FN, COMBO_TERM_SLOW, COMBO
 ZMK_COMBO(m_f5,  &kp F5,        LT1 LM1,         MOBA_FN, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(m_f1,  &kp F1,        LT0 LM0,         MOBA_FN, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
-ZMK_COMBO(f_1,   &kp N1,        LT3 LM3,             FPS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(f_2,   &kp N2,        LT2 LM2,             FPS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(f_3,   &kp N3,        LT1 LM1,             FPS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(f_4,   &kp N4,        LT0 LM0,             FPS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(f_n1,  &kp N1,        LT3 LM3,             FPS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(f_n2,  &kp N2,        LT2 LM2,             FPS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(f_n3,  &kp N3,        LT1 LM1,             FPS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(f_n4,  &kp N4,        LT0 LM0,             FPS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 ZMK_COMBO(f_f2,  &kp F2,        LT4 LM4,          FPS_FN, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(f_f3,  &kp F3,        LT3 LM3,          FPS_FN, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
